--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,26 +4,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Fira+Sans+Extra+Condensed:ital,wght@0,200;1,200;1,300;1,600&display=swap" rel="stylesheet">
     <title>Chat App</title>
     <script src="/socket.io/socket.io.js"></script>
     <link rel="stylesheet" href="style.css">
     <style>
-        img {
-            display: block;
-            margin: auto;
-            height: 70px;
-            width: 70px;
+
+
+        body{
+            background-color: #E42C6A;
+        } 
+        .logo {
+            text-align: center;
         }
 
-        .container {
+        .containerr {
             height: 400px;
-            width: 600px;
-            background-color: aquamarine;
+            width: 550px;
+            background-color: #2471A3;
             display: block;
             margin: auto;
             border: 3px solid blueviolet;
             border-radius: 10px;
-            overflow: scroll;
+            overflow-y: hidden;
         }
 
         .message {
@@ -55,61 +61,54 @@
         #messageInp {
             float: left;
             width: 443px;
-            height: 30px;
+            height: 36px;
             border-radius: 5px;
             border: 2px solid blueviolet;
         }
 
-        .btn {
+        .btnn {
             float: left;
             height: 35px;
         }
         
-        img{
-            border-radius: 5px;
-        }
-        .navbar{
-            background-color: lightblue;
-            border: 3px solid black;
-            border-radius: 10px;
-        }
-        .navbar ul{
-            overflow: auto;
-        }
-        .navbar li{
-            float : left;
-            list-style: none;
-        }
-        .navbar li a{
-            padding : 3px 5px;
-            font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-            text-decoration: none;
-        }
+
     </style>
 </head>
 
 <body>
     <header>
-        <nav class="navbar">
-            <ul>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+ <a class="navbar-brand" href="#">Connect With Friend</a>
+ <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+   <span class="navbar-toggler-icon"></span>
+ </button>
 
-                <li><a href = "/chat">Chatting App</a></li>
-                <li><a href = "#">Voice Call App</a></li>
-                <li><a href = "#">Video Call App</a></li>
-                <li><a href = "/live" target="_blank" rel="noopener noreferrer">Live Visitors</a></li>
-            </ul>
-        </nav>
+ <div class="collapse navbar-collapse" id="navbarSupportedContent">
+   <ul class="navbar-nav mr-auto">
+     <li class="nav-item active">
+       <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+     </li>
+     <li class="nav-item">
+       <a class="nav-link" href="/chat">Chat</a>
+       <li>
+           <li class="nav-item">
+               <a class="nav-link" href="/live" target="_blank" rel="noopener noreferrer">Live Visitors</a>
+               <li>
+   </ul>
+ </div>
+</nav>
     </header>
     <nav>
-        <img src="chat.jpg" alt="">
+        <h4 class = "logo">Chat with Friends</h4>
     </nav>
-    <div class="container">
+        
+    <div class="containerr">
 
     </div>
     <div class="send">
         <form action="#" id="send-container">
             <input type="text" id="messageInp" name="messageInp">
-            <button class="btn" type="submit">Send</button>
+            <button class="btnn btn-success" type="submit">Send</button>
         </form>
     </div>
     <script src="client.js"></script>
