--- a/views/main.ejs
+++ b/views/main.ejs
@@ -1,28 +1,42 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+
     <title>Connect with Friend</title>
     <style>
-        .navbar{
-            background-color: lightblue;
-            border: 3px solid black;
+        body{
+            background-color: #E42C6A;
+        } 
+        .container{
+            height: 500px;
+            width: 600px;
+            background-color: aquamarine;
+            border: 3px solid blueviolet;
             border-radius: 10px;
         }
-        .navbar ul{
-            overflow: auto;
+        .message {
+            background-color: burlywood;
+            width: 500px;
+            margin: 10px;
+            border: 2px solid black;
+            border-radius: 6px;
+            padding: 5px;
         }
-        .navbar li{
-            float : left;
-            list-style: none;
+        .left {
+            float: left;
+            clear: both;
         }
-        .navbar li a{
-            padding : 3px 5px;
-            font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-            text-decoration: none;
+        .live{
+            margin-left: 20px;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         }
-        img{
+           img{
             display: block;
             margin : auto;
             border-radius: 20px;
@@ -32,19 +46,30 @@
             border: 4px solid black;
         }
     </style>
-</head>
-<body>
-    <header>
-        <nav class="navbar">
-            <ul>
+  </head>
+  <body>
+     <header>
+         <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#">Connect With Friend</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
-                <li><a href = "/chat">Chatting App</a></li>
-                <li><a href = "#">Voice Call App</a></li>
-                <li><a href = "#">Video Call App</a></li>
-                <li><a href = "/live" target="_blank" rel="noopener noreferrer">Live Visitors</a></li>
-            </ul>
-        </nav>
-    </header>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="/" target="_blank" rel="noopener noreferrer">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/chat">Chat</a>
+        <li>
+            <li class="nav-item">
+                <a class="nav-link" href="/live">Live Visitors</a>
+                <li>
+    </ul>
+  </div>
+</nav>
+     </header>
         <img src="connect.png" alt="">
     
 </body>
